# pla_dryer

./: .gitignore  CMakeLists.txt  main.c  program_idea.txt
src/lcd/: lcd.c
src/lcd/include/: lcd.h
